# recordtec

./: .dockerignore  .env.example  .env.monitoring  .env.prod  .trivyignore  .zuul.yaml  DEPLOYMENT.md  Dockerfile  OBSERVABILITY-SETUP.md  OTEL-ENDPOINTS.md  OTEL-SETUP.md  QUICK-REFERENCE.md  README.md  SECURITY.md  conftest.py  connectivity_checks.sh  docker-compose.local.yaml  docker-compose.monitoring.yaml  docker-compose.yaml  docker-entrypoint.sh  generate-load.sh  heavy-load.sh  limited-load.sh  pyproject.toml  run-with-otel.sh  simple-load.sh  test-endpoints.sh
.github/workflows/: ci-cd.yml  ci.yml
playbooks/: smoke.yaml
scripts/: docker_test.sh
src/: main.py
src/controllers/: generes.py  health.py
src/db/models/: genere.py
src/db/repositories/: genere_repository.py
src/db/schemas/: __init__.py  genere.py
src/services/: genere_service.py
tests/: genere_service_test.py
