[project]
name = "recordtec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.128.5",
    "opentelemetry-distro[otlp]>=0.60b1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-pymysql>=0.60b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
